--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather-yahoo",
-  "version": "1.0.0",
-  "description": "Search by location, it gives you the weather",
+  "version": "1.0.1",
+  "description": "Search by location to get weather info from Yahoo",
   "author": "Kevin Walchko",
   "main": "yahoo-weather.js",
   "scripts": {
